added search functionality - returning results

--- a/public/style.css
+++ b/public/style.css
@@ -1,11 +1,27 @@
 body {
     margin-top: 60px;
 }
+
+.input-group {
+    margin-top: 50px;
+    text-align: center;
+}
+
+.results {
+    margin-top: 50px;
+    margin-right: 50px;
+    margin-left: 50px;
+    text-align: center;
+}
+
+ul {
+    padding: 0px;
+}
   
 #react-paginate ul {
     display: inline-block;
-    padding-left: 15px;
-    padding-right: 15px;
+    /* padding-left: 15px;
+    padding-right: 15px; */
 }
 
 #react-paginate li {
